Fixed alignment for mobile view

--- a/style.css
+++ b/style.css
@@ -5,14 +5,9 @@ body {
     font-family: 'Roboto Slab', sans-serif;
     background-color: beige;
     letter-spacing: 1px;
-    height: 100vh;
-    width: 100vw;
-}
-
-#main-container {
     display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: center;
+    align-items: center;
 }
 
 header {
